# macos-media-scanner

./: CLAUDE.md  README.md  pyproject.toml
src/media_scanner/: __init__.py  __main__.py  config.py
src/media_scanner/actions/: action_log.py  applescript.py  exporter.py  photokit.py
src/media_scanner/actions/swift/: Info.plist  photos_bridge.swift
src/media_scanner/cli/: actions.py  app.py  bigfiles.py  browse.py  dupes.py  lowres_videos.py  missing.py  quality.py  rapid_shots.py  report.py  scan.py  short_videos.py  similar.py  small_photos.py  stats.py  timeline.py
src/media_scanner/core/: auto_resolver.py  duplicate_finder.py  hasher.py  metadata_analyzer.py  metadata_merger.py  parallel.py  quality_scorer.py  scanner.py  similar_finder.py  video_hasher.py
src/media_scanner/data/: cache.py  migrations.py  models.py
src/media_scanner/ui/: formatters.py  progress.py  report.py  reviewer.py  server.py  tables.py
tests/: conftest.py  test_action_log.py  test_applescript.py  test_auto_resolver.py  test_cache.py  test_config.py  test_duplicate_finder.py  test_exporter.py  test_formatters.py  test_hasher.py  test_metadata_analyzer.py  test_metadata_merger.py  test_metadata_transfer_cache.py  test_migrations.py  test_models.py  test_parallel.py  test_photokit.py  test_quality_scorer.py  test_reviewer.py  test_scanner.py  test_similar_finder.py  test_video_hasher.py
