[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-scanner"
version = "0.1.0"
description = "CLI tool to find duplicates and analyze your macOS Photos library"
requires-python = ">=3.11"
dependencies = [
    "osxphotos>=0.68.0",
    "Pillow>=10.0",
    "ImageHash>=4.3",
    "typer[all]>=0.9",
    "rich>=13.0",
    "pillow-heif>=0.13",
]

[project.scripts]
media-scanner = "media_scanner.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
